--- a/enviro-net/src/app/feature-modules/administration/members-list/members-list.component.scss
+++ b/enviro-net/src/app/feature-modules/administration/members-list/members-list.component.scss
@@ -1,6 +1,7 @@
 .mat-elevation-z8 {
     padding: 20px;
     margin: 20px;
+    margin-top: 65px;
     border-radius: 5px;
     position: relative;
 
