--- a/enviro-net/src/app/feature-modules/administration/my-profile/my-profile.component.scss
+++ b/enviro-net/src/app/feature-modules/administration/my-profile/my-profile.component.scss
@@ -1,6 +1,6 @@
 #my-profile {
     position: fixed;
-    top: 70px;
+    top: 65px;
     left: 0;
     width: 100%;
     height: calc(100% + 100px);
