--- a/enviro-net/src/app/feature-modules/layout/navbar/navbar.component.scss
+++ b/enviro-net/src/app/feature-modules/layout/navbar/navbar.component.scss
@@ -2,6 +2,9 @@ mat-toolbar {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    position: fixed;
+    top: 0%;
+    box-sizing: border-box;
 
     #logo {
         display: flex;
