--- a/enviro-net/src/app/infrastructure/auth/registration/registration.component.scss
+++ b/enviro-net/src/app/infrastructure/auth/registration/registration.component.scss
@@ -1,7 +1,27 @@
+#register{
+    position: fixed;
+    top: 65px;
+    left: 0;
+    width: 100%;
+    margin-bottom: 20px;
+    max-height: 100%;
+    height: fit-content;
+    overflow: scroll;
+    overflow-y: auto;
+    
+    background-image: url("../../../../assets/images/background.png");
+    background-color: #f5f9ea; /* Used if the image is unavailable */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover;
+}
+
 form {
     margin-top: 30px;
     display: flex;
     justify-content: center;
+
+   
 }
 
 .form {
