--- a/enviro-net/src/styles.scss
+++ b/enviro-net/src/styles.scss
@@ -4,3 +4,22 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+
+body { 
+    margin: 0; 
+}
+::-webkit-scrollbar {
+  width: 15px;
+}
+/* Handle (thumb) of the scrollbar */
+::-webkit-scrollbar-thumb {
+    background-color: #719255; /* Color of the thumb */
+    border-radius: 10px; /* Rounded corners */
+  }
+  
+  /* Track (the area on which the thumb moves) of the scrollbar */
+  ::-webkit-scrollbar-track {
+    background-color: #cdd9c3; /* Color of the track */
+    border-radius: 10px;
+  }
